@@ -1,0 +1,3 @@
+<resources>
+    <string name="database">/data/data/net.mandaria.radioreddit/databases/</string>
+</resources>
