@@ -24,6 +24,8 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 
+import android.util.Log;
+
 // This is a container class for the GetRadioStreams async task
 public class RadioStreams
 {
